hphp/hack/test/typecheck/akempty_tuple_bad.php.exp
File "akempty_tuple_bad.php", line 6, characters 10-11:
Invalid return type (Typing[4110])
  File "akempty_tuple_bad.php", line 4, characters 17-38:
  Expected `(?string, vec<int>)`
  File "akempty_tuple_bad.php", line 5, characters 8-15:
  But got `vec<nothing>`
File "akempty_tuple_bad.php", line 12, characters 8-9:
Invalid `echo`/`print` argument (Typing[4438])
  File "akempty_tuple_bad.php", line 12, characters 3-6:
  Expected `~arraykey`
  File "akempty_tuple_bad.php", line 4, characters 18-24:
  But got `?string`
